--- a/covid.html
+++ b/covid.html
@@ -1,85 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>COVID-19 Info</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
-    <style>
-        @charset "UTF-8";
-
-        #content,
-        #horizon {
-            position: absolute;
-            visibility: visible
-        }
-
-        body {
-            font-family: Roboto, cursive;
-            color: #fff;
-            background-color: #fff;
-            margin: 0
-        }
-
-        img,
-        object {
-            max-height: 68%;
-            max-width: 68%;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: auto;
-            border: 0 solid #fff
-        }
-
-        #horizon {
-            color: #096;
-            text-align: center;
-            top: 50%;
-            left: 0;
-            width: 100%;
-            height: 1px;
-            overflow: visible;
-            display: block
-        }
-
-        #content {
-            margin-left: -400px;
-            top: -68px;
-            left: 50%;
-            width: 800px;
-            height: 56px
-        }
-
-        .bodytext {
-            font-size: 14px
-        }
-
-        .style18 {
-            color: #3169b6
-        }
-
-        .style3 {
-            font-size: 68px;
-            font-weight: 700;
-            letter-spacing: 8px;
-            color: #ff0000
-        }
-    </style>
-</head>
-
-<body spellcheck="false" onload="setTimeout(&#34;delayer()&#34;,1e3)">
-    <div id="horizon">
-        <div id="content">
-            <div class="bodytext"><span class="style18"><span class="style3">COVID-19<br>General Info</span></span></div>
-        </div>
-    </div>
-    <script type="text/javascript">
-        function delayer() {
-          window.location = 'https://www.terencelim.com/76428318b641e994b33f5894daafa31b.html';
-        }
-      </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><title>COVID-19 Info</title><script async src="https://www.googletagmanager.com/gtag/js?id=G-PX0M0WNCJP"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-PX0M0WNCJP")</script><link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet"><style>@charset "UTF-8";#content,#horizon{position:absolute;visibility:visible}body{font-family:Roboto,cursive;color:#fff;background-color:#fff;margin:0}img,object{max-height:68%;max-width:68%;position:absolute;top:0;bottom:0;left:0;right:0;margin:auto;border:0 solid #fff}#horizon{color:#096;text-align:center;top:50%;left:0;width:100%;height:1px;overflow:visible;display:block}#content{margin-left:-400px;top:-68px;left:50%;width:800px;height:56px}.bodytext{font-size:14px}.style18{color:#3169b6}.style3{font-size:68px;font-weight:700;letter-spacing:8px;color:red}</style></head><body spellcheck="false" onload="setTimeout(delayer(),500)"><div id="horizon"><div id="content"><div class="bodytext"><span class="style18"><span class="style3">COVID-19<br>General Info</span></span></div></div></div><script type="text/javascript">function delayer(){window.location="https://www.terencelim.com/76428318b641e994b33f5894daafa31b.html"}</script></body></html>
